--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,14 +7,15 @@ on:
 
 jobs:
   build:
-    name: duckdb ${{ matrix.duckdb_version }} × pyodide ${{ matrix.pyodide_version }}
+    name: duckdb ${{ matrix.duckdb_version }} × pyodide ${{ matrix.pyodide_version }} (py${{ matrix.python_version }})
     runs-on: ubuntu-24.04
     strategy:
       fail-fast: false
       matrix:
         include:
-          - duckdb_version: v1.4.4
+          - duckdb_version: 'v1.4.4'
             pyodide_version: '0.29.3'
+            python_version: '3.13'
 
     steps:
       - name: Checkout this repo
@@ -48,7 +49,7 @@ jobs:
 
       - uses: actions/setup-python@v6
         with:
-          python-version: '3.13'
+          python-version: ${{ matrix.python_version }}
 
       - name: Install pyodide-build
         run: |
