--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,9 +14,6 @@ jobs:
             pyodide_version: '0.29.3'
 
     steps:
-      - name: Checkout this repo
-        uses: actions/checkout@v6
-
       - name: Download wheel artifact from latest CI run
         env:
           GH_TOKEN: ${{ github.token }}
@@ -50,14 +47,10 @@ jobs:
         run: |
           TAG="duckdb-${{ matrix.duckdb_version }}-pyodide-${{ matrix.pyodide_version }}"
 
-          python3 scripts/make_release_notes.py \
-            "${{ matrix.duckdb_version }}" "${{ matrix.pyodide_version }}" \
-            > release-notes.md
-
           gh release create "$TAG" \
             --repo "${{ github.repository }}" \
             --title "$TAG" \
-            --notes-file release-notes.md \
+            --notes "" \
             dist/*.whl \
           || gh release upload "$TAG" \
             --repo "${{ github.repository }}" \
